--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-starter-kit",
   "version": "1.0.0",
-  "homepage": "https://mvdegtyar.github.io/react-gh-pages",
+  "homepage": "https://mvdegtyar.github.io/cviceni-pokrocila-komunikace",
   "description": "Starter kit for React JavaScript project",
   "type": "module",
   "scripts": {
@@ -9,7 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
